<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_dialogfragment_selector"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_display"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/montserrat_extrabold"
                android:gravity="center_vertical"
                android:text="@string/log_weight_time"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="230dp">

                <com.github.gzuliyujiang.wheelview.widget.WheelView
                    android:id="@+id/wheel_picker_time_phase"
                    style="@style/WheelDefault"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:wheel_indicatorColor="#4169E1"
                    app:wheel_itemTextColor="@color/black"
                    app:wheel_itemTextColorSelected="@color/black"
                    app:wheel_itemTextSize="22sp"
                    app:wheel_itemTextSizeSelected="22sp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/btn_cancel_phase"
                    android:layout_width="160dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/shape_btn_cancel"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:gravity="center"
                    android:letterSpacing="-0.05"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    app:backgroundTint="#F5F5F5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btn_done_phase"
                    android:layout_width="160dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/shape_btn_done"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:gravity="center"
                    android:letterSpacing="-0.05"
                    android:text="@string/done"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </ScrollView>



</LinearLayout>