<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".ui.calculator.child.SettingFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#F5F5F5"
        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.AppCompat.Light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/setting_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/setting_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/setting_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/montserrat_extrabold"
                android:text="@string/mine"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/setting_back"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_setting">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/setting_card1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/setting_txt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat_extrabold"
                        android:text="@string/set_backup"
                        android:textColor="@color/black"
                        android:textFontWeight="800"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_toEndOf="@id/setting_txt1"
                        android:src="@drawable/google_icon" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="28dp"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/refresh_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/setting_txt1"
                        android:layout_marginStart="15dp"
                        android:text="@string/drive_syncing_data"
                        android:textColor="@color/black"
                        android:textFontWeight="800"
                        android:textSize="16sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/setting_card2"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_card1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/setting_language_card"
                        android:layout_width="match_parent"
                        android:layout_height="69.5dp"
                        android:clickable="true"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/setting_card2_image1"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="24dp"
                                android:src="@drawable/setting_global" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="28dp"
                                android:layout_toEndOf="@id/setting_card2_image1"
                                android:gravity="center"
                                android:lineHeight="21sp"
                                android:text="@string/language_title"
                                android:textColor="@color/black"
                                android:textSize="16sp" />
                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/card2_space"
                        android:clickable="true">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/setting_card2_image2"
                                android:layout_width="33dp"
                                android:layout_height="32dp"
                                android:layout_marginStart="14.5dp"
                                android:layout_marginTop="14dp"
                                android:src="@drawable/setting_google" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="14dp"
                                android:layout_marginTop="20dp"
                                android:layout_toEndOf="@id/setting_card2_image2"
                                android:lineHeight="21sp"
                                android:text="@string/connect_with_google_fit"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:layout_width="45dp"
                                android:layout_height="20dp"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentBottom="true"
                                android:layout_marginEnd="22.5dp"
                                android:layout_marginBottom="23.5dp"
                                android:checked="true"
                                android:enabled="true"
                                app:thumbTint="#3659CF"
                                app:trackTint="#354AD8"
                                app:useMaterialThemeColors="false" />
                        </RelativeLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <View
                        android:id="@+id/card2_space"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/setting_language_card"
                        android:layout_marginStart="50dp"
                        android:layout_marginEnd="30dp"
                        android:background="#DDDDDD" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/setting_card3"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="16.5dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_card2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="59.5dp"
                        android:layout_marginTop="3.5dp"
                        android:clickable="true"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/card3_rad_img"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="14dp"
                                android:src="@drawable/remove_ads_icon" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="19.5dp"
                                android:layout_toEndOf="@id/card3_rad_img"
                                android:lineHeight="21sp"
                                android:text="@string/remove_ad"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="50.5dp"
                        android:layout_marginEnd="30dp"
                        android:background="#DDDDDD" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="59.5dp"
                        android:clickable="true"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/card3_rtu_img"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="14dp"
                                android:src="@drawable/rate_us_icon" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="19.5dp"
                                android:layout_toEndOf="@id/card3_rtu_img"
                                android:lineHeight="21sp"
                                android:text="@string/rate_us"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="50.5dp"
                        android:layout_marginEnd="30dp"
                        android:background="#DDDDDD" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="59.5dp"
                        android:clickable="true"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/card3_fb_img"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="14dp"
                                android:src="@drawable/remove_ads_icon" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="19.5dp"
                                android:layout_toEndOf="@id/card3_fb_img"
                                android:lineHeight="21sp"
                                android:text="@string/feedback"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="50.5dp"
                        android:layout_marginEnd="30dp"
                        android:background="#DDDDDD" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="59.5dp"
                        android:clickable="true"
                        app:cardElevation="0dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/card3_pp_img"
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="14dp"
                                android:src="@drawable/remove_ads_icon" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="15dp"
                                android:layout_marginTop="19.5dp"
                                android:layout_toEndOf="@id/card3_pp_img"
                                android:lineHeight="21sp"
                                android:text="@string/privacy_policy"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                        </RelativeLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Version 1.0.0"
                android:textColor="@color/black"
                android:textFontWeight="400"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_card3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>